slurm-5303572.out
Slurm job 5303572 running on 
To run on 6 CPU cores across 2 nodes
All nodes: gpu-b10-3,gpu-b11-1  
On zaratan node
Traceback (most recent call last):
  File "/scratch/zt1/project/tianyi-prj/user/yliang17/Research/gene_diffcls/FLYP/src/main.py", line 9, in <module>
    from src.models.flyp_loss import flyp_loss
  File "/scratch/zt1/project/tianyi-prj/user/yliang17/Research/gene_diffcls/FLYP/src/models/flyp_loss.py", line 315
    wandb.init(project="sd_exprs", config=args, name=args.exp_name, group=args.wandb_group_name, start_method="fork"))
                                                                                                                     ^
SyntaxError: unmatched ')'
Job finished with exit code 1 
